--- a/src/game/Board.css
+++ b/src/game/Board.css
@@ -8,3 +8,18 @@
     display: flex;
     flex-direction: row;
 }
+
+.jugadores-casilla {
+  position: absolute;
+  bottom: 5px;
+  left: 5px;
+  display: flex;
+  gap: 5px;
+}
+
+.avatar-mini {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
