--- a/src/game/Casilla.css
+++ b/src/game/Casilla.css
@@ -14,18 +14,17 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 150px;        /* más bajitas por defecto */
+  height: 150px;        
   justify-content: space-between;
   align-items: center;
 }
 
 
 .casilla img {
-  height: 100px;        /* imagen más pequeña */
+  height: 100px;        
   object-fit: contain;
 }
 
-/* En pantallas muuuy chicas, hacemos las tarjetas un poquito más altas */
 @media (max-width: 420px) {
   .casilla-container { height: 175px; }
   .casilla img { height: 120px; }
